added footer in all pages

--- a/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
@@ -1,7 +1,7 @@
 <app-user-navbar></app-user-navbar>
 <div class="lg:grid lg:grid-cols-12 lg:gap-8">
   <div class="hidden lg:block lg:col-span-3 xl:col-span-2 bg-gray-800">
-    <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px; height: 950px;">
+    <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px; height: 1000px;">
       <div class="pb-8 space-y-1">
         <!-- Current: "bg-gray-200 style="padding:25px;"text-gray-900", Default: "text-gray-600 hover:bg-gray-50" -->
         <a routerLink="/home"
@@ -221,3 +221,4 @@
   </div>
 </main>
 </div>
+<app-footer></app-footer>
