--- a/artist4all_angular/src/app/components/public/footer/footer.component.html
+++ b/artist4all_angular/src/app/components/public/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-800">
+<footer class="bg-black">
   <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
     <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
       <div class="px-5 py-2">
@@ -83,7 +83,7 @@
       </a>
     </div>
     <p class="mt-8 text-center text-base text-gray-400">
-      &copy; 2020 Workflow, Inc. All rights reserved.
+      &copy; 2021 Artist4All. All rights reserved.
     </p>
   </div>
 </footer>
