--- a/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
@@ -70,7 +70,7 @@
         <div
           class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
           <div class="flex-shrink-0">
-            <img class="h-10 w-10 rounded-full" src="{{ user.img }}" alt="">
+            <img class="h-10 w-10 rounded-full" src="http://localhost:81/assets/img/{{ user.imgAvatar }}" alt="">
           </div>
           <div class="flex-1 min-w-0">
             <a routerLink="/user/{{ user.id }}/profile" class="focus:outline-none">
