--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -73,7 +73,7 @@
                   <i class="fas fa-times-circle text-red-700 hover:text-red-500"></i>Rechazar</button>
                 <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                 (click)="notificationRead(notification.id, i)">
-                  <i class="fas fa-eye hover:text-gray-500"></i>Leído</button>
+                  <i class="fas fa-check-double hover:text-gray-500"></i>Leído</button>
                 <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                 (click)="removeNotification(notification.id, i)">
                   <i class="fas fa-trash-alt text-red-700 hover:text-red-500"></i>Borrar</button>
