--- a/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
@@ -22,91 +22,78 @@
       <div class="d-flex flex-column comment-section" id="myGroup">
         <div *ngFor="let comment of comments; index as i;">
           <div class="bg-white p-2">
-            <div class="d-flex flex-row user-info"><img class="rounded-circle" src="https://i.imgur.com/RpzrMR2.jpg"
+            <div class="d-flex flex-row user-info"><img class="rounded-circle" src="http://localhost:81/assets/img/{{ comment.user.imgAvatar }}"
                 width="40">
-              <div class="d-flex flex-column justify-content-start ml-2"><span
-                  class="d-block font-weight-bold name">Marry
-                  Andrews</span><span class="date text-black-50">Shared publicly - Jan 2020</span></div>
+              <div class="d-flex flex-column justify-content-start ml-2">
+                <span class="d-block font-weight-bold name">{{ comment.user.username }}</span>
+                <span class="date text-black-50">{{ comment.comment_date }}</span>
+              </div>
             </div>
             <div class="mt-2">
-              <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="comment-text">{{ comment.bodyComment }}</p>
             </div>
           </div>
           <div class="bg-white p-2">
             <div class="d-flex flex-row fs-12">
-              <div class="like p-2 cursor action-collapse" data-toggle="collapse" aria-expanded="true"
-                aria-controls="collapse-1" (click)="toggleResponseForm(i)"><i class="fas fa-comment-dots"></i><span
-                  class="ml-1">Comentar</span></div>
-              <div class="like p-2 cursor action-collapse" (click)="toggleSubcomments(i)"><i
-                  class="fas fa-comments"></i><span class="ml-1">Ver
-                  respuestas</span></div>
+              <div class="like p-2 cursor action-collapse" (click)="toggleResponseForm(i)">
+                <i class="fas fa-comment-dots"></i>
+                <span class="ml-1">Comentar</span></div>
+              <div class="like p-2 cursor action-collapse" (click)="toggleSubcomments(i)">
+                <i class="fas fa-comments"></i>
+                <span class="ml-1">Ver respuestas</span>
+              </div>
             </div>
           </div>
 
-          <div id="{{i + 'formResponseContainer'}}" class="bg-light p-2 collapse hidden">
-            <div class="d-flex flex-row align-items-start">
-              <img class="rounded-circle" src="https://i.imgur.com/RpzrMR2.jpg" width="40">
-              <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+            <div id="{{i + 'formResponseContainer'}}" class="bg-light p-2 collapse hidden">
+              <div class="d-flex flex-row align-items-start">
+                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="40">
+                <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+              </div>
+              <div class="mt-2 text-right">
+                <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
+                  (click)="toggleResponseForm(i)">Cancelar</button>
+                <button class="btn btn-primary btn-sm shadow-none" type="button">Publicar respuesta</button>
+              </div>
             </div>
-            <div class="mt-2 text-right">
-              <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
-                (click)="toggleResponseForm(i)">Cancelar</button>
-              <button class="btn btn-primary btn-sm shadow-none" type="button">Publicar respuesta</button>
-            </div>
-          </div>
 
+            <div id="{{i + 'subcommentContainer'}}" class="p-2 collapse">
+              <div *ngFor="let subcomment of lo; index as ind;">
+              <div class="d-flex flex-row user-info">
+                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ subcomment.user.imgAvatar }}" width="40" height="10">
+                <div class="d-flex flex-column justify-content-start ml-2">
+                  <span class="d-block font-weight-bold name">{{ subcomment.user.username }}</span>
+                  <span class="date text-black-50">{{ subcomment.comment_date }}</span>
+                </div>
+              </div>
+              <div class="mt-2">
 
-
-
-
-
-
-
-          <div id="{{i + 'subcommentContainer'}}" class="p-2 collapse hidden">
-            <div>
-              <!-- TODO: change loop conditional-->
-              <div>
-                <div class="bg-white p-2 w-11/12 ml-16 rounded-md">
-                  <div>
-                    <div class="d-flex flex-row user-info"><img class="rounded-circle"
-                        src="http://localhost:81/assets/img/{{ imgAvatar }}" width="40" height="10">
-                      <div class="d-flex flex-column justify-content-start ml-2">
-                        <span class="d-block font-weight-bold name">Marry Andrews</span>
-                        <span class="date text-black-50">Shared publicly - Jan 2020</span>
-                      </div>
-                    </div>
-                    <div class="mt-2">
-                      <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                    <div class="bg-white p-2">
-                      <div class="d-flex flex-row fs-12">
-                        <div class="like p-2 cursor action-collapse -ml-1" data-toggle="collapse" aria-expanded="true"
-                          aria-controls="collapse-1" (click)="toggleSubcommentResponseForm();">
-                          <i class="fas fa-comment-dots"></i>
-                          <span class="ml-1">Responder</span>
-                        </div>
-                      </div>
-                    </div>
+                <p class="comment-text">
+                  <a routerLink="/user/{{ comment.user.id }}/profile" class="text-blue-500">
+                    @{{ comment.user.username }}
+                  </a>{{ subcomment.bodyComment }}
+                </p>
+              </div>
+              <div class="bg-white p-2">
+                <div class="d-flex flex-row fs-12">
+                  <div class="like p-2 cursor action-collapse -ml-1" data-toggle="collapse" aria-expanded="true"
+                    aria-controls="collapse-1" (click)="toggleSubcommentResponseForm(ind);">
+                    <i class="fas fa-comment-dots"></i>
+                    <span class="ml-1">Responder</span>
                   </div>
-
-                  <!--TODO: fix displaying-->
-                  <div id="{{i +'formSubcommentResponseForm'}}" class="bg-light p-2 mt-1 hidden">
-                    <div>
-                      <div class="d-flex flex-row align-items-start">
-                        <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="40">
-                        <textarea class="form-control ml-1 shadow-none textarea"></textarea>
-                      </div>
-
-                      <div class="mt-2 text-right">
-                        <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1"
-                          (click)="toggleSubcommentResponseForm();" type="button">Cancelar</button>
-                        <button class="btn btn-primary btn-sm shadow-none" type="button">Responder</button>
-                      </div>
+                </div>
+              </div>
+              <div class="bg-white p-2 w-11/12 ml-16 rounded-md">
+                <div id="{{ind +'formSubcommentResponseForm'}}" class="bg-light p-2 mt-1 hidden">
+                  <div>
+                    <div class="d-flex flex-row align-items-start">
+                      <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="40">
+                      <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+                    </div>
+                    <div class="mt-2 text-right">
+                      <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1"
+                        (click)="toggleSubcommentResponseForm(ind);" type="button">Cancelar</button>
+                      <button class="btn btn-primary btn-sm shadow-none" type="button">Responder</button>
                     </div>
                   </div>
                 </div>
