--- a/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
@@ -22,8 +22,8 @@
       <div class="d-flex flex-column comment-section" id="myGroup">
         <div *ngFor="let comment of comments; index as i;">
           <div class="bg-white p-2">
-            <div class="d-flex flex-row user-info"><img class="rounded-circle" src="http://localhost:81/assets/img/{{ comment.user.imgAvatar }}"
-                width="40">
+            <div class="d-flex flex-row user-info">
+              <img class="rounded-circle" src="http://localhost:81/assets/img/{{ comment.user.imgAvatar }}" width="50">
               <div class="d-flex flex-column justify-content-start ml-2">
                 <span class="d-block font-weight-bold name">{{ comment.user.username }}</span>
                 <span class="date text-black-50">{{ comment.comment_date }}</span>
@@ -37,7 +37,8 @@
             <div class="d-flex flex-row fs-12">
               <div class="like p-2 cursor action-collapse" (click)="toggleResponseForm(i)">
                 <i class="fas fa-comment-dots"></i>
-                <span class="ml-1">Comentar</span></div>
+                <span class="ml-1">Comentar</span>
+              </div>
               <div class="like p-2 cursor action-collapse" (click)="toggleSubcomments(i)">
                 <i class="fas fa-comments"></i>
                 <span class="ml-1">Ver respuestas</span>
@@ -45,22 +46,23 @@
             </div>
           </div>
 
-            <div id="{{i + 'formResponseContainer'}}" class="bg-light p-2 collapse hidden">
-              <div class="d-flex flex-row align-items-start">
-                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="40">
-                <textarea class="form-control ml-1 shadow-none textarea"></textarea>
-              </div>
-              <div class="mt-2 text-right">
-                <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
-                  (click)="toggleResponseForm(i)">Cancelar</button>
-                <button class="btn btn-primary btn-sm shadow-none" type="button">Publicar respuesta</button>
-              </div>
+          <div id="{{i + 'formResponseContainer'}}" class="bg-light p-2 collapse hidden">
+            <div class="d-flex flex-row align-items-start">
+              <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
+              <textarea class="form-control ml-1 shadow-none textarea"></textarea>
             </div>
+            <div class="mt-2 text-right">
+              <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
+                (click)="toggleResponseForm(i)">Cancelar</button>
+              <button class="btn btn-primary btn-sm shadow-none" type="button">Publicar respuesta</button>
+            </div>
+          </div>
 
-            <div id="{{i + 'subcommentContainer'}}" class="p-2 collapse">
-              <div *ngFor="let subcomment of lo; index as ind;">
+          <div id="{{i + 'subcommentContainer'}}" class="p-2 collapse w-10/12 ml-16">
+            <div *ngFor="let subcomment of subcomments; index as ind;">
               <div class="d-flex flex-row user-info">
-                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ subcomment.user.imgAvatar }}" width="40" height="10">
+                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ subcomment.user.imgAvatar }}"
+                  width="50">
                 <div class="d-flex flex-column justify-content-start ml-2">
                   <span class="d-block font-weight-bold name">{{ subcomment.user.username }}</span>
                   <span class="date text-black-50">{{ subcomment.comment_date }}</span>
@@ -83,11 +85,11 @@
                   </div>
                 </div>
               </div>
-              <div class="bg-white p-2 w-11/12 ml-16 rounded-md">
+              <div class="bg-white p-2 rounded-md">
                 <div id="{{ind +'formSubcommentResponseForm'}}" class="bg-light p-2 mt-1 hidden">
                   <div>
                     <div class="d-flex flex-row align-items-start">
-                      <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="40">
+                      <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
                       <textarea class="form-control ml-1 shadow-none textarea"></textarea>
                     </div>
                     <div class="mt-2 text-right">
@@ -99,6 +101,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div id="{{i + 'noSubcommentContainer'}}" class="p-2 collapse w-10/12">
+            Este comentario no tiene respuestas.
           </div>
         </div>
       </div>
