--- a/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container mt-5">
-  <div class="d-flex justify-content-center row">
+  <div class="d-flex justify-content-center row" style="margin-bottom: 20%;">
     <div class="col-md-8">
       <div class="d-flex flex-column comment-section" id="myGroup">
         <div *ngFor="let comment of comments; index as i;">
@@ -35,18 +35,18 @@
           </div>
           <div class="bg-white p-2">
             <div class="d-flex flex-row fs-12">
-              <div class="like p-2 cursor action-collapse" (click)="toggleResponseForm(i)">
+              <div class="p-2 cursor" (click)="toggleResponseForm(i)">
                 <i class="fas fa-comment-dots"></i>
                 <span class="ml-1">Comentar</span>
               </div>
-              <div class="like p-2 cursor action-collapse" (click)="toggleSubcomments(i)">
+              <div class="p-2 cursor" (click)="toggleSubcomments(i)">
                 <i class="fas fa-comments"></i>
                 <span class="ml-1">Ver respuestas</span>
               </div>
             </div>
           </div>
 
-          <div id="{{i + 'formResponseContainer'}}" class="bg-light p-2 collapse hidden">
+          <div id="{{i + 'formResponseContainer'}}" *ngIf="responseFormIndexAux===i" class="bg-light p-2">
             <div class="d-flex flex-row align-items-start">
               <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
               <textarea class="form-control ml-1 shadow-none textarea"></textarea>
@@ -58,35 +58,35 @@
             </div>
           </div>
 
-          <div id="{{i + 'subcommentContainer'}}" class="p-2 collapse w-10/12 ml-16">
-            <div *ngFor="let subcomment of subcomments; index as ind;">
-              <div class="d-flex flex-row user-info">
-                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ subcomment.user.imgAvatar }}"
-                  width="50">
-                <div class="d-flex flex-column justify-content-start ml-2">
-                  <span class="d-block font-weight-bold name">{{ subcomment.user.username }}</span>
-                  <span class="date text-black-50">{{ subcomment.comment_date }}</span>
+          <div id="{{i + 'subcommentContainer'}}" *ngIf="subcommentIndexAux===i" class="p-2 w-10/12 ml-16">
+            <div *ngIf="subcomments != null">
+              <div *ngFor="let subcomment of subcomments; index as ind;">
+                <div class="d-flex flex-row user-info">
+                  <img class="rounded-circle" src="http://localhost:81/assets/img/{{ subcomment.user.imgAvatar }}"
+                    width="50">
+                  <div class="d-flex flex-column justify-content-start ml-2">
+                    <span class="d-block font-weight-bold name">{{ subcomment.user.username }}</span>
+                    <span class="date text-black-50">{{ subcomment.comment_date }}</span>
+                  </div>
                 </div>
-              </div>
-              <div class="mt-2">
+                <div class="mt-2">
 
-                <p class="comment-text">
-                  <a routerLink="/user/{{ comment.user.id }}/profile" class="text-blue-500">
-                    @{{ comment.user.username }}
-                  </a>{{ subcomment.bodyComment }}
-                </p>
-              </div>
-              <div class="bg-white p-2">
+                  <p class="comment-text">
+                    <a routerLink="/user/{{ comment.user.id }}/profile" class="text-blue-500">
+                      @{{ comment.user.username }}
+                    </a>{{ subcomment.bodyComment }}
+                  </p>
+                </div>
+                <div class="bg-white p-2">
                 <div class="d-flex flex-row fs-12">
-                  <div class="like p-2 cursor action-collapse -ml-1" data-toggle="collapse" aria-expanded="true"
-                    aria-controls="collapse-1" (click)="toggleSubcommentResponseForm(ind);">
+                  <div class="p-2 cursor -ml-1" (click)="toggleSubcommentResponseForm(ind);">
                     <i class="fas fa-comment-dots"></i>
                     <span class="ml-1">Responder</span>
                   </div>
                 </div>
               </div>
               <div class="bg-white p-2 rounded-md">
-                <div id="{{ind +'formSubcommentResponseForm'}}" class="bg-light p-2 mt-1 hidden">
+                <div id="{{ind +'formSubcommentResponseForm'}}" *ngIf="subCommentFormAuxIndex===ind" class="bg-light p-2 mt-1">
                   <div>
                     <div class="d-flex flex-row align-items-start">
                       <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
@@ -100,10 +100,8 @@
                   </div>
                 </div>
               </div>
+              </div>
             </div>
-          </div>
-          <div id="{{i + 'noSubcommentContainer'}}" class="p-2 collapse w-10/12">
-            Este comentario no tiene respuestas.
           </div>
         </div>
       </div>
