--- a/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
@@ -47,15 +47,17 @@
           </div>
 
           <div id="{{i + 'formResponseContainer'}}" *ngIf="responseFormIndexAux===i" class="bg-light p-2">
-            <div class="d-flex flex-row align-items-start">
-              <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
-              <textarea class="form-control ml-1 shadow-none textarea"></textarea>
-            </div>
-            <div class="mt-2 text-right">
-              <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
-                (click)="toggleResponseForm(i)">Cancelar</button>
-              <button class="btn btn-primary btn-sm shadow-none" type="button">Publicar respuesta</button>
-            </div>
+            <form [formGroup]="commentFormResponse" (ngSubmit)="postResponse(i);">
+              <div class="d-flex flex-row align-items-start">
+                <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
+                <textarea formControlName="bodyComment" class="form-control ml-1 shadow-none textarea"></textarea>
+              </div>
+              <div class="mt-2 text-right">
+                <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
+                  (click)="toggleResponseForm(i)">Cancelar</button>
+                <button class="btn btn-primary btn-sm shadow-none" type="submit">Publicar respuesta</button>
+              </div>
+            </form>
           </div>
 
           <div id="{{i + 'subcommentContainer'}}" *ngIf="subcommentIndexAux===i" class="p-2 w-10/12 ml-16">
@@ -87,17 +89,17 @@
               </div>
               <div class="bg-white p-2 rounded-md">
                 <div id="{{ind +'formSubcommentResponseForm'}}" *ngIf="subCommentFormAuxIndex===ind" class="bg-light p-2 mt-1">
-                  <div>
+                  <form [formGroup]="commentFormResponse" (ngSubmit)="postResponse(ind);">
                     <div class="d-flex flex-row align-items-start">
                       <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
-                      <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+                      <textarea formControlName="bodyComment" class="form-control ml-1 shadow-none textarea"></textarea>
                     </div>
                     <div class="mt-2 text-right">
                       <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1"
                         (click)="toggleSubcommentResponseForm(ind);" type="button">Cancelar</button>
-                      <button class="btn btn-primary btn-sm shadow-none" type="button">Responder</button>
+                      <button class="btn btn-primary btn-sm shadow-none" type="submit">Responder</button>
                     </div>
-                  </div>
+                  </form>
                 </div>
               </div>
               </div>
