background light grey change

--- a/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
@@ -1,5 +1,5 @@
 <app-user-navbar></app-user-navbar>
-<div class="lg:grid lg:grid-cols-12 lg:gap-8">
+<div class="lg:grid lg:grid-cols-12 lg:gap-8 bg-gray-100">
   <div class="hidden lg:block lg:col-span-3 xl:col-span-2 bg-gray-800">
     <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px; height: 1000px;">
       <div class="pb-8 space-y-1">
