--- a/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
@@ -86,10 +86,10 @@
 
 
         <form action="/" accept-charset="UTF-8" method="post"><input type="hidden">
-          <textarea class="w-full shadow-inner p-4 border-0 mb-4 rounded-lg focus:shadow-outline text-xl"
+          <textarea class="w-full shadow-inner p-4 border-0 mb-4 rounded-lg focus:shadow-outline text-base"
             placeholder="Añade tu comentario..." cols="7" rows="3" id="comment_content" spellcheck="false"></textarea>
           <button
-            class="font-bold py-2 px-4 w-full bg-indigo-500 hover:bg-indigo-700 text-lg text-white shadow-md rounded-lg ">Publicar
+            class="font-bold py-2 px-4 w-full bg-indigo-500 hover:bg-indigo-700 text-base text-white shadow-md rounded-lg ">Publicar
           </button>
         </form>
 
@@ -99,11 +99,11 @@
             <div class="flex flex-row justify-center mr-2">
               <img alt="avatar" width="48" height="48" class="rounded-full w-10 h-10 mr-4 shadow-lg mb-4"
                 src="https://cdn1.iconfinder.com/data/icons/technology-devices-2/100/Profile-512.png">
-              <h3 class="text-indigo-600 font-semibold text-lg text-center md:text-left ">@Shanel</h3>
+              <h3 class="text-indigo-600 font-semibold text-base text-center md:text-left ">@Shanel</h3>
             </div>
 
 
-            <p style="width: 90%" class="text-gray-600 text-lg text-center md:text-left ">Hi good morning will it be the
+            <p style="width: 90%" class="text-gray-600 text-base text-center md:text-left ">Hi good morning will it be the
               entire house. </p>
 
           </div>
