--- a/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
@@ -142,7 +142,7 @@
           </div>
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
             <div>
-              <h2 class="text-lg leading-6 font-medium text-gray-900">Cambiar mi contraseña</h2>
+              <h2 class="text-lg leading-6 font-medium text-gray-900">Modificar mi contraseña</h2>
             </div>
 
             <div class="mt-6 grid grid-cols-12 gap-6">
